Update category and Instagram sections

--- a/index.html
+++ b/index.html
@@ -17,22 +17,20 @@
     <span></span><span></span><span></span>
   </label>
 
-  <nav class="nav-links">
-    <a href="./index.html">Home</a>
-
+<nav class="nav-links">
+  <a href="index.html" class="nav-link active">Home</a>
     <div class="dropdown">
-      <button class="dropbtn" onclick="toggleDropdown()">Collections ▾</button>
+      <button class="dropbtn " onclick="toggleDropdown()">Collections ▾</button>
       <div class="dropdown-content" id="dropdownMenu">
         <a href="./men.html">Men</a>
         <a href="./women.html">Women</a>
         <a href="./accessories.html">Accessories</a>
       </div>
     </div>
+  <a href="community.html" class="nav-link">Community</a>
+  <a href="contact.html" class="nav-link">Contact</a>
+</nav>
 
-    <a href="./community.html">Community</a>
-    <a href="./contact.html">Contact</a>
-    
-  </nav>
 </header>
 
 
@@ -178,7 +176,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/ca70611b74d70b2aad88e1a48d3b266e.jpg" alt="Instagram Image 1" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 1">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 1">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -190,7 +188,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_004556.jpg" alt="Instagram Image 2" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 2">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 2">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -202,7 +200,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_101242.jpg" alt="Instagram Image 3" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 3">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 3">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -214,7 +212,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_005024.jpg" alt="Instagram Image 4" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 4">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 4">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -226,7 +224,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_005332.jpg" alt="Instagram Image 5" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 5">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 5">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -238,7 +236,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_005610.jpg" alt="Instagram Image 6" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 6">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 6">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -250,7 +248,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_005551.jpg" alt="Instagram Image 7" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 7">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 7">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
@@ -262,7 +260,7 @@
         <div class="insta-box">
           <img src="./Asset/Hompage/instagram/IMG_20250430_100558.jpg" alt="Instagram Image 8" />
           <div class="insta-overlay">
-            <a href="https://www.instagram.com/henry357161/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 8">
+            <a href="https://www.instagram.com/dream53167/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram for Image 8">
               <svg xmlns="http://www.w3.org/2000/svg" class="instagram-icon" viewBox="0 0 24 24" fill="currentColor" width="20" height="20" aria-hidden="true">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.6 3.1a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
               </svg>
