--- a/men.html
+++ b/men.html
@@ -10,29 +10,26 @@
   
 <!-- Navbar Section -->
   <header class="navbar">
-    <a href="./index.html" class="navbar-brand">
-      <div class="navbar-brand"> Vīsitō </div>
-    </a>
-    
-    <input type="checkbox" id="nav-toggle" class="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-    <nav class="navbar-links">
-      <a href="./index.html">Home</a>
-      <div class="dropdown">
-        <a href="#" class="dropdown-toggle">Collections ▾</a>
-        <div class="dropdown-menu">
-          <a href="./men.html" class="active" >Men</a>
-          <a href="./women.html">Women</a>
-          <a href="./accessories.html">Accessories</a>
-        </div>
+     <div class="navbar-brand">Vīsitō</div>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="hamburger">
+    <span></span><span></span><span></span>
+  </label>
+
+<nav class="nav-links">
+  <a href="index.html" class="nav-link ">Home</a>
+    <div class="dropdown">
+      <button class="dropbtn " onclick="toggleDropdown()">Collections ▾</button>
+      <div class="dropdown-content" id="dropdownMenu">
+        <a href="./men.html" class="nav-link active">Men</a>
+        <a href="./women.html">Women</a>
+        <a href="./accessories.html">Accessories</a>
       </div>
-      <a href="./community.html">Community</a>
-      <a href="./contact.html">Contact</a>
-    </nav>
+    </div>
+  <a href="community.html" class="nav-link">Community</a>
+  <a href="contact.html" class="nav-link">Contact</a>
+</nav>
     <div class="cart-icon" id="cartIcon" data-count="0">🛒</div>
   </header>
 
