--- a/community.html
+++ b/community.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-  <!-- Navbar Section -->
-  <header class="navbar">
-     <div class="navbar-brand">Vīsitō</div>
+<!-- Navbar Section -->
+<header class="navbar">
+  <a href="./index.html">
+       <div class="navbar-brand">Vīsitō</div>
+  </a>
 
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="hamburger">
