--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <!-- Navbar Section -->
 <header class="navbar">
-  <div class="navbar-brand">Vīsitō</div>
-
+  <a href="./index.html">
+       <div class="navbar-brand">Vīsitō</div>
+  </a>
+  
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="hamburger">
     <span></span><span></span><span></span>
