--- a/men.html
+++ b/men.html
@@ -9,8 +9,10 @@
 <body>
   
 <!-- Navbar Section -->
-  <header class="navbar">
-     <div class="navbar-brand">Vīsitō</div>
+<header class="navbar">
+  <a href="./index.html">
+       <div class="navbar-brand">Vīsitō</div>
+  </a>
 
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="hamburger">
