--- a/accessories.html
+++ b/accessories.html
@@ -32,7 +32,7 @@
   <a href="community.html" class="nav-link">Community</a>
   <a href="contact.html" class="nav-link">Contact</a>
 </nav>
-    <div class="cart-icon" id="cartIcon" data-count="0">🛒</div>
+      <div class="cart-icon" id="cartIcon" data-count="0" onclick="showCartSummary()">🛒</div>
   </header>
 
   <!-- Header Info -->
