--- a/women.html
+++ b/women.html
@@ -33,7 +33,7 @@
   <a href="community.html" class="nav-link">Community</a>
   <a href="contact.html" class="nav-link">Contact</a>
 </nav>
-    <div class="cart-icon" id="cartIcon" data-count="0">🛒</div>
+    <div class="cart-icon" id="cartIcon" data-count="0" onclick="showCartSummary()">🛒</div>
   </header>
 
   <!-- Header Info -->
@@ -74,6 +74,8 @@
   <div style="text-align: center; margin: 30px;">
     <button class="cart-btn whatsapp-btn" onclick="sendToWhatsApp()">Shop 🛒</button>
   </div>
+
+
 
 
 
